--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+  color: black;
+}
+::placeholder{
+  color: black;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
